changing background photo

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ button{
     color: black
   }
   body{
-    background-image: url('https://i.imgur.com/bSpwYHH.jpg'); 
+    background-image: url('https://i.imgur.com/f7DnkeG.png'); 
     background-size:1400px 1300px; 
     background-repeat: no-repeat
   }
